--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    buildFeatures {
+        viewBinding true
+    }
+
 
     buildTypes {
         release {
@@ -54,5 +58,14 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.12.0"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    //Lottie
+    implementation "com.airbnb.android:lottie:3.7.2"
+
+    //Dots indicator
+    implementation "com.tbuonomo:dotsindicator:4.2"
+
+    //View Pager 2
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
 }
